<resources>
    <string name="app_name">My Application</string>
    <string name="text1">Нетология. Унивирситет интренет проф...</string>
    <string name="text2">Привет, это новая Нетология! Когда-то Нетология
начиналась с интенсивов по онлайн-маркетингу. Затем
появились курсы по дизайну, разработке, аналитике
иуправлению. Мы растём сами и помогаем расти
студентам: от новичков до уверенных профессионалов.
Но самое важное остаётся снами: мы верим, что в

каждом уже есть сила, которая заставляет хотеть
больше, целиться выше, бежать быстрее. Наша миссия

— помочь встать на путь роста и начать цепочку

перемен... netology.ru </string>
    <string name="data">21 мая в 18:36</string>
    <string name="like">102222</string>
    <string name="share">12226</string>
    <string name="smotr">100110</string>

</resources>