<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="415dp"
        android:layout_height="92dp"
        android:layout_marginTop="20px"
        android:outlineAmbientShadowColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="20px"
                android:layout_weight="0.4"
                app:srcCompat="@drawable/netology" />

            <LinearLayout
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:layout_weight="0.4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="286dp"
                    android:layout_height="49dp"
                    android:layout_marginLeft="20px"
                    android:layout_marginTop="20px"
                    android:layout_weight="1"
                    android:text="@string/text1"
                    android:textColor="#676767" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginLeft="20px"
                    android:layout_weight="1"
                    android:text="@string/data"
                    android:textColor="#676767" />
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="372dp"
        android:layout_height="372dp"
        android:layout_marginTop="20dp"
        android:lineHeight="65px"
        android:outlineAmbientShadowColor="#000000"
        android:shadowColor="#000000"
        android:text="@string/text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />

    <FrameLayout
        android:layout_width="376dp"
        android:layout_height="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="33dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/heart" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginLeft="90px"
            android:layout_marginBottom="10px"
            android:text="@string/like" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="230px"
            app:srcCompat="@drawable/share" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="320px"
            android:text="@string/share" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="36dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="750px"
            app:srcCompat="@drawable/eyes" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="840px"
            android:text="@string/smotr" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>